# mac-llm-ops-lab

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yaml  mkdocs.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260628_153500_initial_persistence_schema.py
docs/: backend-contracts.md  backends.md  design.md  development.md  evidence.md  index.md  mac-studio-cluster.md  model-catalog.md  observability.md  open-webui.md  operations.md  persistence.md  release-readiness.md  runtime-stack.md
docs/assets/: mermaid-init.js
scripts/: local-runtime.sh  run-model-backed-api.sh  run-vllm-mlx-backend.sh  start-detached.py
src/mac_llm_ops_lab/: app.py  backend_contracts.py  batching.py  cli.py  cluster.py  config.py  macos_services.py  metrics.py  openai_compatible_backend.py  release_readiness.py  runtime_artifacts.py  runtime_guard.py  runtime_stack.py
tests/: test_alembic_migrations.py  test_app_factory.py  test_backend_contracts.py  test_batching.py  test_cli.py  test_cluster.py  test_cluster_node_evidence.py  test_compose_config.py  test_config.py  test_docker_runtime.py  test_learning_docs.py  test_macos_services.py  test_makefile_helpers.py  test_model_catalog.py  test_observability.py  test_observability_docs.py  test_open_webui_integration.py  test_openai_compatible_backend.py  test_persistence_docs.py  test_persistence_ports.py  test_persistence_sqlalchemy.py  test_release_readiness.py  test_runtime_artifacts.py  test_runtime_guard.py  test_runtime_stack.py  test_runtime_stack_docs.py
(+5 files in other folders)
