[project]
name = "mac-llm-ops-lab"
version = "0.1.0"
description = "Mac-first LLM serving lab with FastAPI service contracts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.8,<3.0",
    "uvicorn>=0.32,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9.0",
    "ruff>=0.8,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mac_llm_ops_lab"]

[tool.pytest.ini_options]
addopts = "-ra"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
